data/diff_tests/wasmtime/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2548.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\02\95\80\80\80\00\02\03\65\6e"
    "\76\03\66\6f\6f\00\00\03\65\6e\76\03\62\61\72\00"
    "\00\03\82\80\80\80\00\01\01\0a\a0\80\80\80\00\01"
    "\9a\80\80\80\00\00\02\40\02\40\02\40\41\01\10\00"
    "\41\02\10\01\41\02\0e\02\01\00\00\0b\0b\0b\0b"
  )
""
)